# srt-ai-translator

./: .gitignore  README.md  pyproject.toml  srt-ai-translator.py
srt_ai_translator/: __main__.py
